--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  laravel.test:
+  laravel:
     build:
       context: ./backend
       dockerfile: docker/8.2/Dockerfile
@@ -36,7 +36,7 @@ services:
       - ./backend:/var/www/html
       - ./backend/docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - laravel.test
+      - laravel
     networks:
       - sail
 
@@ -56,7 +56,7 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - laravel.test
+      - laravel
     networks:
       - sail
 
