--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "^2.3",
         "tymon/jwt-auth": "^2.2"
     },
