--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       XDEBUG_MODE: develop,debug
       XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003
+      TZ: Asia/Tokyo
     command: sh -c "php artisan serve --host=0.0.0.0 --port=8000"
     volumes:
       - ./backend:/var/www/html
@@ -23,6 +24,9 @@ services:
       MYSQL_DATABASE: laravel
       MYSQL_USER: sail
       MYSQL_PASSWORD: password
+      TZ: Asia/Tokyo
+    volumes:
+      - mysql_data:/var/lib/mysql
     ports:
       - "3307:3306"
     networks:
@@ -47,6 +51,17 @@ services:
     networks:
       - sail
 
+  redisinsight:
+    image: redis/redisinsight:latest
+    ports:
+      - "8001:5540" # open http://localhost:8001
+    volumes:
+      - redisinsight_data:/data
+    depends_on:
+      - redis
+    networks:
+      - sail
+      
   nuxt:
     image: node:20
     working_dir: /app
@@ -63,3 +78,9 @@ services:
 networks:
   sail:
     driver: bridge
+
+volumes:
+  mysql_data:
+    driver: local
+  redisinsight_data:
+    driver: local
